added uart data transfer facility

--- a/practice_2.runs/impl_1/.vivado.begin.rst
+++ b/practice_2.runs/impl_1/.vivado.begin.rst
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado" Owner="prormrxcn-meow" Host="meow" Pid="56149" HostCore="8" HostMemory="16104268">
+    <Process Command="vivado" Owner="prormrxcn-meow" Host="meow" Pid="12749" HostCore="8" HostMemory="16104272">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado" Owner="prormrxcn-meow" Host="meow" Pid="16635" HostCore="8" HostMemory="16104272">
     </Process>
 </ProcessHandle>
